@@ -217,7 +217,8 @@ Excavation.SubSkill.GigaDrillBreaker.Name=Giga Drill Breaker
 Excavation.SubSkill.GigaDrillBreaker.Description=3x Drop Rate, 3x EXP, +Speed
 Excavation.SubSkill.GigaDrillBreaker.Stat=Giga Drill Breaker Duration
 Excavation.SubSkill.Archaeology.Name=Archaeology
-Excavation.SubSkill.Archaeology.Description=Unearth the secrets of the land!
+Excavation.SubSkill.Archaeology.Description=Unearth the secrets of the land! Find treasure and experience orbs!
+Excavation.SubSkill.Archaeology.Stat={0}% chance to find {1} experience orbs alongside treasure
 Excavation.Listener=Excavation:
 Excavation.SkillName=EXCAVATION
 Excavation.Skills.GigaDrillBreaker.Off=**Giga Drill Breaker has worn off**
